# execasm

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  asmfuck.S  asmfuck.h  main.c  unhex
pkt/: datastore.S  datastore.pkt
